# task_4

./: CMakeLists.txt  KA04_Shtrikker_DY_1_v8_16_09_2021.docx  KA04_Shtrikker_DY_1_v8_17_09_2021.docx
include/task_4/: competition.h  date.h  participant.h  performance.h  uses_priority_queue.h  uses_priority_queue.hpp
src/: competition.cpp  date.cpp  main.cpp  participant.cpp  performance.cpp  uses_priority_queue_impl.cpp
